--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "font-awesome": "^4.7.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.9.1",
+    "path": "^0.12.7",
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.25",
@@ -46,8 +48,6 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.5.3",
-    "path": "^0.12.7",
-    "express": "^4.17.1"
   },
   "engines": {
     "node": "10.19.0",
